--- a/assets/main.css
+++ b/assets/main.css
@@ -141,8 +141,8 @@ Grid
   box-sizing: border-box;
 }
 body {
-  background-color: #0d080e;
-  background-image: url("img/sunset.jpeg");
+  background-color: #ccd0dc;
+  background-image: url("img/trees.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: top;
